# meetup

./: .gitignore  Exploration.ipynb  README.md  pyproject.toml
berlin_groups/: groupMeetingPoints.geojson  groupRegions.geojson  mailingList.csv  runDetails.json  usersAssignments.geojson
data/: tours.csv
meetup/: __init__.py  __main__.py  caching.py  cli.py  clustering.py  geo.py  logging.py  server.py  vis.py
meetup/interactive_viz_template/: index.html
meetup/interactive_viz_template/assets/: index-429d9ff5.js  index-56cd9e74.js  index-7f5ab46f.css  index-a02c35c8.css  index-b2f35b25.css  index-c2d9e08b.js  mapbox-gl-15e49793.js  mapbox-gl-a4f0deaa.js  mapbox-gl-a8a96d60.js
tests/: helpers.py  test_cli.py  test_clustering.py  test_geo.py
visualization/: package.json  pnpm-lock.yaml  vite.config.ts
visualization/src/: App.css  App.tsx  index.css
visualization/src/components/: ClusterSizeHistogram.tsx  GroupsViewer.tsx  Legend.tsx  MapView.tsx  RunDetails.tsx  SelectedGroupInfo.tsx  Sidebar.tsx
visualization/src/stores/: DataStore.ts  InterfaceStore.ts
visualization/src/utils/: colors.ts
