[tool.poetry]
name = "meetup"
version = "0.1.0"
description = "A cli to find starting points and routes for komoot activity meetups"
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
osmnx = "^1.3.0"
networkx = "^3.1"
pytest = "^7.3.1"
jupyterlab = "^3.6.3"
sklearn = "^0.0.post4"
numpy = "^1.24.3"
geopandas = "^0.12.2"
seaborn = "^0.12.2"
rich = "^13.3.5"
typer = "^0.9.0"
overpy = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
